@@ -174,6 +174,14 @@ typedef struct slurm_conf_downnodes {
 	char *state;
 } slurm_conf_downnodes_t;
 
+typedef struct slurm_conf_switches {
+	char *nodes;		/* names of nodes directly connect to
+				 * this switch, if any */
+	char *switch_name;	/* name of this switch */
+	char *switches;		/* names if child switches directly
+				 * connected to this switch, if any */
+} slurm_conf_switches_t;
+
 /*
  * slurm_conf_init - load the slurm configuration from the a file.
  * IN file_name - name of the slurm configuration file to be read
@@ -239,11 +247,19 @@ extern int slurm_conf_partition_array(slurm_conf_partition_t **ptr_array[]);
 
 /*
  * Set "ptr_array" with the pointer to an array of pointers to
- * slurm_conf_node_t structures.
+ * slurm_conf_downnodes_t structures.
  * 
  * Return value is the length of the array.
  */
 extern int slurm_conf_downnodes_array(slurm_conf_downnodes_t **ptr_array[]);
+
+/*
+ * Set "ptr_array" with the pointer to an array of pointers to
+ * slurm_conf_switch_t structures.
+ * 
+ * Return value is the length of the array.
+ */
+extern int slurm_conf_switch_array(slurm_conf_switches_t **ptr_array[]);
 
 /*
  * slurm_conf_get_hostname - Return the NodeHostname for given NodeName
