@@ -5,7 +5,10 @@ documents those changes that are of interest to users and admins.
 =============================
  -- OpenMPI users only: Add srun logic to automatically recreate and 
     re-launch a job step if the step fails with a reserved port conflict.
- -- Add TopologyPlugin configuration parameter.
+ -- Add TopologyPlugin configuration parameter (not currently used).
+    Add switch topology data structure to slurmctld (for use by select plugin)
+    add load it based upon new slurm.conf parameters: SwitchName, Nodes, and 
+    Switches.
 
 * Changes in SLURM 1.4.0-pre8
 =============================
